<resources>
    <string name="app_name">UniLocal</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_nickname">Nickname</string>
    <string name="txt_busqueda">Buscar lugar</string>
    <string name="info_lugar">Informacion del lugar</string>
    <string name="comentarios">Comentarios</string>
    <string name="horarios_del_lugar">Horarios del lugar</string>
    <string name="txt_restaurantes">Restaurantes</string>
    <string name="txt_hoteles">Hoteles</string>
    <string name="txt_almacen">Almacen</string>
    <string name="txt_cafes">Cafes</string>
    <string name="txt_bares">Bares</string>
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="maximo_caracteres">Máximo 10 caracteres</string>
    <string name="lugar_creado">Lugar creado con exito</string>
    <string name="datos_correctos">Los datos son correctos</string>
    <string name="datos_incorrectos">Los datos son incorrectos</string>
    <string name="logout">cerrar sesion</string>
    <string name="txt_nombre_lugar">Nombre del negocio</string>
    <string name="txt_descripcion_lugar">Descripción del negocio</string>
    <string name="txt_telefono_lugar">Teléfono del negocio</string>
    <string name="btn_crear_lugar">Crear nuevo Lugar</string>
    <string name="btn_nuevo_lugar">Nuevo negocio</string>
    <string name="btn_direccion_lugar">Dirección del negocio</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_mis_lugares">Mis Lugares</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="nombre_usuario_header">Nombre Usuario</string>
    <string name="correo_usuario_header">Correo Usuario</string>
    <string name="menu_user">Menú</string>
    <string name="mis_lugares_user">Mis Lugares</string>
    <string name="crear_lugar_user">Crear Lugar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lugar_aca">El lugar se encuentra aca</string>
    <string name="ingresar_datos">Ingresa todos los compos PORFAVOR !</string>
    <string name="debes_llenar">Debes llenar este campo!</string>
    <string name="registro_correcto">Se ha registrador correctamente</string>
    <string name="correo_enviado">El correo de confirmacion ha sido enviado</string>
    <string name="correo_error">Ha ocurrido un error</string>
    <string name="moderador_eliminado">Se ha eliminado el moderador</string>
    <string name="perfil_actualizado">Se ha actualizado tu perfil</string>
    <string name="revisar_correo">Revisa tu correo, para recuperar tu contraseña</string>
    <string name="correo_no_existe">No existe este correo en el registro, rectifica :(</string>
    <string name="registro_correcto_user">Se ha registrador correctamente</string>
    <string name="lugar_aceptado">Lugar aceptado</string>
    <string name="lugar_rechazado">Lugar rechazado</string>
    <string name="comentario_eviado">Se envio el comentario con exito</string>
    <string name="marcar_fav">Tienes que marcar una calificacion para enviar</string>
    <string name="lugar_fav">Se añadio el lugar a tus favoritos :)</string>
    <string name="lugar_no_fav">Se quito el lugar de tus favoritos :)</string>
    <string name="ubicado_Aca">Estas ubicado aca</string>
    <string name="lugar_no_revisado">Lugar sin revisar!</string>
    <string name="deshacer">Deshacer</string>
    <string name="crear_lugar">Crear lugar</string>
    <string name="seleccionar_imagen">Seleccione las imagenes de su local</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="crear_moderador">Crear Moderador</string>
    <string name="crear_moderador_btn">Crear Moderador</string>
    <string name="eliminar_moderador">Eliminar Moderador</string>
    <string name="telefono">Telefono</string>
    <string name="direecion">Direecion</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="seleccionar_imagenes">Seleccionar imagen</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="fecha_comentario">Fecha de publicacion del comentario</string>
    <string name="contenido_del_comentario">Contenido del comentario</string>
    <string name="loading">Loading...</string>
    <string name="escribe_tu_comentario">Escribe tu comentario aqui</string>
    <string name="publicar_comentario">Publicar comentario</string>
    <string name="comentarios_publicados">Comentarios publicados</string>
    <string name="accion">Accion</string>
    <string name="nombre_del_moderador">Nombre del moderador</string>
    <string name="correo_del_moderador">correo del moderador</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="menu">Menu</string>
    <string name="gestion_moderadores">Gestion Moderadores</string>
    <string name="nuevos_lugares">Nuevos lugares</string>
    <string name="historial">Historial</string>
    <string name="favoritos">Favoritos</string>
    <string name="horario">Horario</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="agergar_horario">Agregar horario</string>
    <string name="lugar_eliminado">Se elimino el lugar con exito</string>

</resources>