<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navInicio"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/inicio" />

        <item
            android:id="@+id/navMiPerfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/navCategorias"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="Categorias" />

        <item
            android:id="@+id/navCerrarSesion"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/cerrar_sesion" />
    </group>

</menu>