<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.CrearModeradorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/crear_moderador"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_layout"
            style="@style/til_form"
            android:layout_width="321dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/moderador_nombre"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_nombre"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_layout"
            style="@style/til_form"
            android:layout_width="321dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/nickname_moderador"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_nickname"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correo_layout"
            style="@style/til_form"
            android:layout_width="321dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/moderador_correo"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/til_form"
            android:layout_width="321dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/moderador_password"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_contrasena"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_crear_mod"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_blue_200"
        android:text="@string/crear_moderador_btn"
        android:textColor="@color/black"></Button>

</LinearLayout>