<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditarLugarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/parte_imagen"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="100dp"
                    android:src="@mipmap/ic_launcher"></ImageView>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parte_imagen"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></ImageView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombre_layout"
                    style="@style/til_form"
                    android:layout_width="313dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/txt_nombre">

                    <EditText
                        android:id="@+id/nombre_local_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_forms"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campo_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_nombre"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telefono_layout"
                    style="@style/til_form"
                    android:layout_width="313dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/telefono">

                    <EditText
                        android:id="@+id/telefono_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_forms"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campo_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_telefono"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/campo_direccion_layout"
                    style="@style/til_form"
                    android:layout_width="313dp"
                    android:layout_gravity="center"
                    android:hint="@string/direecion">

                    <EditText
                        android:id="@+id/direccion_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_forms"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campo_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_telefono"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/category_edit"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:background="@drawable/fondo_forms"
                    android:hint="Categoria"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campo_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/city_edit"
                    android:layout_width="313dp"
                    android:layout_height="50dp"
                    android:background="@drawable/fondo_forms"
                    android:hint="Ciudad"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campo_horario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_city"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/campo_descripcion"
                    android:layout_width="313dp"
                    android:layout_height="200dp"
                    android:layout_below="@id/campo_city"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descripcion_layout"
                        style="@style/til_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/descripcion_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/fondo_forms"
                            android:hint="@string/txt_descripcion_lugar"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_guardar_cambios_lugar_usuario"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/guardar_cambios"
                android:backgroundTint="@color/light_blue_200"
                android:textColor="@color/black"></Button>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>